--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,5 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
     compile 'com.google.android.gms:play-services:12.0.1'
-
+    compile 'com.github.mjn1369:prettydialog:1.0.2'
 }
