--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     compile 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
     compile 'com.google.android.gms:play-services:12.0.1'
     compile 'com.github.mjn1369:prettydialog:1.0.2'
+    compile 'com.google.zxing:core:3.2.1'
+    compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
 }
